[package]
name = "hello_macro_test"
version = "0.1.0"
edition = "2018"

[dependencies]
hello_macro = { path = "../hello_macro" }
hello_macro_derve = { path = "../hello_macro_derve" }
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.1.12"
progress_bar = "0.1.3"
rbtree="0.1"
pbr="1.0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features=false,features = ["alloc"] }
